# subwhiz

./: README.md  pyproject.toml
subwhiz/: __init__.py  subwhiz.py
