[tool.poetry]
name = "subwhiz"
version = "0.1.0"
description = ""
authors = ["Sebas <diego.cruz.cervantes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ffmpeg-python = "0.2.0"
torch = "2.5.1"
numpy = "1.26.4"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
